<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary">

    <View
        android:id="@+id/view"
        android:layout_width="0dp"
        android:layout_height="284dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:background="@drawable/view_roundet"
        app:layout_constraintBottom_toTopOf="@id/view2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.110000014" />

    <View
        android:id="@+id/view2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="320dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="160dp"
        android:background="@drawable/view_roundet"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.65999997" />

    <View
        android:id="@+id/view3"
        android:layout_width="0dp"
        android:layout_height="128dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/view_roundet"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view2"
        app:layout_constraintVertical_bias="0.94" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonBack"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="320dp"
        android:layout_height="98dp"
        android:backgroundTint="@color/colorPrimeryButton"
        android:text="@string/buttonBack_Search"
        android:textColor="@color/colorTextSecondary"
        android:textSize="20sp"
        android:translationZ="7dp"
        app:layout_constraintBottom_toBottomOf="@+id/view3"
        app:layout_constraintEnd_toEndOf="@+id/view3"
        app:layout_constraintStart_toStartOf="@+id/view3"
        app:layout_constraintTop_toTopOf="@+id/view3" />

    <ImageView
        android:id="@+id/imageHimidity"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:src="@drawable/humidity_img"
        app:layout_constraintEnd_toEndOf="@+id/view"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/imageTempWeather"
        app:layout_constraintTop_toBottomOf="@+id/imagePressure" />

    <ImageView
        android:id="@+id/imagePressure"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:src="@drawable/pressure_img"
        app:layout_constraintEnd_toEndOf="@+id/view"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/imageTempWeather"
        app:layout_constraintTop_toTopOf="@+id/view" />

    <ImageView
        android:id="@+id/imageTempWeather"
        android:layout_width="128dp"
        android:layout_height="128dp"
        app:layout_constraintBottom_toBottomOf="@+id/view"
        app:layout_constraintEnd_toEndOf="@+id/view"
        app:layout_constraintHorizontal_bias="0.05"
        app:layout_constraintStart_toStartOf="@+id/view"
        app:layout_constraintTop_toTopOf="@+id/view"
        app:layout_constraintVertical_bias="0.05"
        android:src="@drawable/android_01d" />

    <ImageView
        android:id="@+id/imageWind"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:src="@drawable/wind_img"
        app:layout_constraintEnd_toEndOf="@+id/view"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/imageTempWeather"
        app:layout_constraintTop_toBottomOf="@+id/imageHimidity" />

    <ImageView
        android:id="@+id/imageTemp"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginTop="10dp"
        android:src="@drawable/temperature_img"
        app:layout_constraintEnd_toEndOf="@+id/view"
        app:layout_constraintHorizontal_bias="0.02"
        app:layout_constraintStart_toStartOf="@+id/view"
        app:layout_constraintTop_toBottomOf="@+id/imageTempWeather" />

    <ImageView
        android:id="@+id/imageSunR"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_marginTop="5dp"
        android:src="@drawable/android_01d"
        app:layout_constraintEnd_toEndOf="@+id/view"
        app:layout_constraintHorizontal_bias="0.04"
        app:layout_constraintStart_toStartOf="@+id/view"
        app:layout_constraintTop_toBottomOf="@+id/imageTemp" />

    <ImageView
        android:id="@+id/imageSunS"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_marginTop="5dp"
        android:src="@drawable/moon_img"
        app:layout_constraintEnd_toEndOf="@+id/view"
        app:layout_constraintHorizontal_bias="0.04"
        app:layout_constraintStart_toStartOf="@+id/view"
        app:layout_constraintTop_toBottomOf="@+id/imageSunR" />

    <TextView
        android:id="@+id/textPressure"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Pressure"
        android:textColor="@color/colorTextPrimary"
        android:fontFamily="@font/comic_sans_ms"
        app:layout_constraintBottom_toBottomOf="@+id/view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/imagePressure"
        app:layout_constraintTop_toTopOf="@+id/view"
        app:layout_constraintVertical_bias="0.05" />

    <TextView
        android:id="@+id/textPressureScore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:fontFamily="@font/comic_sans_ms"
        android:text=""
        android:textColor="@color/colorTextPrimary"
        app:layout_constraintBottom_toBottomOf="@+id/view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/textPressure"
        app:layout_constraintTop_toTopOf="@+id/view"
        app:layout_constraintVertical_bias="0.05" />

    <TextView
        android:id="@+id/textHumidity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Humidity"
        android:textColor="@color/colorTextPrimary"
        android:fontFamily="@font/comic_sans_ms"
        app:layout_constraintBottom_toBottomOf="@+id/view"
        app:layout_constraintEnd_toEndOf="@+id/view"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/imageHimidity"
        app:layout_constraintTop_toBottomOf="@+id/textPressure"
        app:layout_constraintVertical_bias="0.12" />

    <TextView
        android:id="@+id/textHumidityScore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:fontFamily="@font/comic_sans_ms"
        android:text=""
        android:textColor="@color/colorTextPrimary"
        app:layout_constraintBottom_toBottomOf="@+id/view"
        app:layout_constraintEnd_toEndOf="@+id/view"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/textHumidity"
        app:layout_constraintTop_toBottomOf="@+id/textPressure"
        app:layout_constraintVertical_bias="0.12" />

    <TextView
        android:id="@+id/textWind"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Wind"
        android:textColor="@color/colorTextPrimary"
        android:fontFamily="@font/comic_sans_ms"
        app:layout_constraintBottom_toBottomOf="@+id/view"
        app:layout_constraintEnd_toEndOf="@+id/view"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/imageWind"
        app:layout_constraintTop_toBottomOf="@+id/textHumidity"
        app:layout_constraintVertical_bias="0.15" />

    <TextView
        android:id="@+id/textTemperatura"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/comic_sans_ms"
        app:fontFamily="@font/comic_sans_ms"
        android:text=""
        android:textColor="@color/colorTextPrimary"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/view"
        app:layout_constraintEnd_toEndOf="@+id/view"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/imageTemp"
        app:layout_constraintTop_toBottomOf="@+id/imageTempWeather"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textSunR"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/TextStyle"
        android:text="@string/SunR"
        android:textColor="@color/colorTextPrimary"
        app:layout_constraintBottom_toBottomOf="@+id/view"
        app:layout_constraintEnd_toEndOf="@+id/view"
        app:layout_constraintHorizontal_bias=" 0.03"
        app:layout_constraintStart_toEndOf="@+id/imageSunR"
        app:layout_constraintTop_toBottomOf="@+id/textTemperatura"
        app:layout_constraintVertical_bias="0.25" />

    <TextView
        android:id="@+id/textInfoSunR"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:fontFamily="@font/comic_sans_ms"
        android:text=""
        android:textColor="@color/colorTextPrimary"
        app:layout_constraintBottom_toBottomOf="@+id/view"
        app:layout_constraintEnd_toEndOf="@+id/view"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/textSunR"
        app:layout_constraintTop_toBottomOf="@+id/textTemperatura"
        app:layout_constraintVertical_bias="0.25" />

    <TextView
        android:id="@+id/textSunS"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/comic_sans_ms"
        android:text="@string/SunS"
        android:textColor="@color/colorTextPrimary"
        app:layout_constraintBottom_toBottomOf="@+id/view"
        app:layout_constraintEnd_toEndOf="@+id/view"
        app:layout_constraintHorizontal_bias=" 0.03"
        app:layout_constraintStart_toEndOf="@+id/imageSunS"
        app:layout_constraintTop_toBottomOf="@+id/textSunR"
        app:layout_constraintVertical_bias="0.41" />

    <TextView
        android:id="@+id/textInfoSunS"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:fontFamily="@font/comic_sans_ms"
        android:text=""
        android:textColor="@color/colorTextPrimary"
        app:layout_constraintBottom_toBottomOf="@+id/view"
        app:layout_constraintEnd_toEndOf="@+id/view"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/textSunS"
        app:layout_constraintTop_toBottomOf="@+id/textSunR"
        app:layout_constraintVertical_bias="0.39" />

    <TextView
        android:id="@+id/textCountry"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/comic_sans_ms"
        android:text="@string/Country"
        android:textColor="@color/colorTextPrimary"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="@+id/view2"
        app:layout_constraintEnd_toEndOf="@+id/view2"
        app:layout_constraintHorizontal_bias="0.102"
        app:layout_constraintStart_toStartOf="@+id/view2"
        app:layout_constraintTop_toTopOf="@+id/view2"
        app:layout_constraintVertical_bias="0.24" />

    <TextView
        android:id="@+id/textInfoCountry"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="2dp"
        android:fontFamily="@font/comic_sans_ms"
        android:text=""
        android:textColor="@color/colorTextPrimary"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="@+id/view2"
        app:layout_constraintEnd_toEndOf="@+id/view2"
        app:layout_constraintHorizontal_bias="0.03"
        app:layout_constraintStart_toEndOf="@+id/textCountry"
        app:layout_constraintTop_toTopOf="@+id/view2"
        app:layout_constraintVertical_bias="0.24000001" />

    <TextView
        android:id="@+id/textCity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/comic_sans_ms"
        android:text="@string/City"
        android:textColor="@color/colorTextPrimary"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="@+id/view2"
        app:layout_constraintEnd_toEndOf="@+id/view2"
        app:layout_constraintHorizontal_bias="0.102"
        app:layout_constraintStart_toStartOf="@+id/view2"
        app:layout_constraintTop_toBottomOf="@+id/textCountry"
        app:layout_constraintVertical_bias="0.6" />

    <TextView
        android:id="@+id/textInfoCity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/comic_sans_ms"
        android:text=""
        android:textColor="@color/colorTextPrimary"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="@+id/view2"
        app:layout_constraintEnd_toEndOf="@+id/view2"
        app:layout_constraintHorizontal_bias="0.03"
        app:layout_constraintStart_toEndOf="@+id/textCity"
        app:layout_constraintTop_toBottomOf="@+id/textInfoCountry"
        app:layout_constraintVertical_bias="0.6" />

    <TextView
        android:id="@+id/textWindScore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:fontFamily="@font/comic_sans_ms"
        android:text=""
        android:textColor="@color/colorTextPrimary"
        app:layout_constraintBottom_toBottomOf="@+id/view"
        app:layout_constraintEnd_toEndOf="@+id/view"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/textWind"
        app:layout_constraintTop_toBottomOf="@+id/textHumidity"
        app:layout_constraintVertical_bias="0.15" />

</androidx.constraintlayout.widget.ConstraintLayout>